# Anima-Public

./: .gitattributes  .gitignore  CMakeLists.txt  License.txt  README.md
Anima/: .gitattributes  .gitignore  CMakeLists.txt  README.md
Anima/AnimaCore/: CMakeLists.txt  animaReadWriteFunctions.h
Anima/AnimaCore/BasicImageFilters/: CMakeLists.txt
Anima/AnimaCore/DataIO/: CMakeLists.txt  animaGradientFileReader.hxx  animaShapesReader.cxx  animaShapesReader.h  animaShapesWriter.cxx  animaShapesWriter.h  animaTCKReader.cxx  animaTCKReader.h  animaTRKReader.cxx  animaTRKReader.h  animaTRKWriter.h
Anima/AnimaLibs/: CMakeLists.txt
Anima/AnimaLibs/Common/: CMakeLists.txt
Anima/AnimaLibs/Diffusion/: CMakeLists.txt
Anima/AnimaLibs/Filtering/: CMakeLists.txt
Anima/AnimaLibs/Interpolator/: CMakeLists.txt  animaCubicInterpolation.hxx  animaVectorModelLinearInterpolateImageFunction.hxx
Anima/AnimaLibs/Registration/: CMakeLists.txt
Anima/AnimaLibs/Regularization/: CMakeLists.txt  old.cmake
Anima/AnimaLibs/Relaxometry/: CMakeLists.txt
Anima/AnimaLibs/Segmentation/: CMakeLists.txt  animaGaussianREMEstimator.hxx  animaHierarchicalInitializer.hxx
Anima/AnimaLibs/Smoothing/: CMakeLists.txt  animaRecursiveLineYvvGaussianImageFilter.hxx
Anima/AnimaMaths/: CMakeLists.txt
Anima/AnimaMaths/Interpolators/: animaMCMLinearInterpolateImageFunction.hxx
Anima/AnimaMaths/MatrixOperations/: CMakeLists.txt  animaMatrixOperations.hxx
Anima/AnimaMaths/NumericalIntegration/: CMakeLists.txt  animaGaussLaguerreQuadrature.h  animaGaussLegendreQuadrature.h
Anima/AnimaMaths/Optimizers/: CMakeLists.txt  animaBLMLambdaCostFunction.h  animaBVLSOptimizer.h  animaBaseRootFindingAlgorithm.h  animaBisectionRootFindingAlgorithm.h  animaBoostBisectionRootFindingAlgorithm.h  animaBoundedLevenbergMarquardtOptimizer.h  animaBracketAndSolveRootFindingAlgorithm.h  animaBrentRootFindingAlgorithm.h  animaCholeskyDecomposition.h  animaDekkerRootFindingAlgorithm.h  animaNNLSOptimizer.h  animaTOMS748RootFindingAlgorithm.h  animaVoxelExhaustiveOptimizer.h
Anima/AnimaMaths/Quaternions/: animaQuaternionTools.h  animaQuaternionTools.hxx
Anima/AnimaMaths/SpecialFunctions/: CMakeLists.txt  animaBesselFunctions.cxx  animaBesselFunctions.h  animaErrorFunctions.h  animaGammaFunctions.h  animaKummerFunctions.h  animaLegendreDerivatives.h
Anima/AnimaMaths/SphereOperations/: CMakeLists.txt
Anima/AnimaMaths/SphericalHarmonics/: CMakeLists.txt  animaODFFunctions.h  animaODFMaximaCostFunction.h  animaODFSphericalHarmonicBasis.h  animaSphericalHarmonic.h
Anima/AnimaMaths/StatisticalDistributions/: CMakeLists.txt  animaBaseDistribution.h  animaDirichletDistribution.cxx  animaDirichletDistribution.h  animaGammaDistribution.h  animaMultivariateNormalDistribution.h  animaRealUniformDistribution.h  animaSphericalUniformDistribution.h  animaVonMisesFisherDistribution.h  animaWatsonDistribution.cxx  animaWatsonDistribution.h
Anima/AnimaMaths/Tensors/: animaLogTensorImageFilter.hxx
Anima/AnimaTests/: CMakeLists.txt
Anima/AnimaTools/: CMakeLists.txt
Anima/AnimaTools/AnalyticAssociatedLegendre/: animaAnalyticAssociatedLegendre.cxx
Anima/AnimaTools/Diffusion/: CMakeLists.txt
Anima/AnimaTools/Filtering/: CMakeLists.txt
Anima/AnimaTools/Image/: CMakeLists.txt
Anima/AnimaTools/ImageWrangling/: CMakeLists.txt
Anima/AnimaTools/Intensity/: CMakeLists.txt
Anima/AnimaTools/MathsTools/: CMakeLists.txt
Anima/AnimaTools/Noise/: CMakeLists.txt
Anima/AnimaTools/Registration/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/: CMakeLists.txt
Anima/AnimaTools/Segmentation/: CMakeLists.txt
Anima/AnimaTools/Statistics/: CMakeLists.txt
Anima/cmake/: ANIMAConfig.cmake.in  ANIMAExports.cmake.in  ANIMAUse.cmake.in  AnimaDependencies.cmake  AnimaModulesSetup.cmake  FindARB.cmake  FindFLINT.cmake  FindGMP.cmake  FindMPFR.cmake  FindNLOPT.cmake  FindTCLAP.cmake  FindTinyXML2.cmake  ITKLibs.cmake  fsLink.cmake
Anima/cmake/documentation/: Doxyfile.in  UseDoxygen.cmake  anima_dox_footer.html
Anima/cmake/module/: GenerateOldExeName.cmake  list_source_files.cmake  set_exe_install_rules.cmake
Anima/cmake/pairing/: pairing.cmake
Anima/diffusion/: CMakeLists.txt
Anima/diffusion/common/: animaGradientFileReader.hxx
Anima/diffusion/dti/: CMakeLists.txt
Anima/diffusion/dti_estimator/: animaDTIEstimationImageFilter.h  animaDTIEstimationImageFilter.hxx  animaDTIEstimator.cxx
Anima/diffusion/dti_extrapolate/: animaDTIExtrapolate.cxx  animaDTIExtrapolateImageFilter.hxx
Anima/diffusion/dti_tools/: CMakeLists.txt
Anima/diffusion/fibers_analysis/: CMakeLists.txt
Anima/diffusion/mcm/: CMakeLists.txt  animaBaseCompartment.cxx  animaBaseCompartment.h  animaBaseIsotropicCompartment.h  animaBaseMCMCostFunction.cxx  animaBaseMCMCostFunction.h  animaDDICompartment.h  animaFreeWaterCompartment.cxx  animaFreeWaterCompartment.h  animaGaussianMCMCost.cxx  animaGaussianMCMCost.h  animaGaussianMCMCostFunction.cxx  animaGaussianMCMCostFunction.h  animaGaussianMCMVariableProjectionCost.cxx  animaGaussianMCMVariableProjectionCost.h  animaGaussianMCMVariableProjectionMultipleValuedCostFunction.cxx  animaGaussianMCMVariableProjectionMultipleValuedCostFunction.h  animaGaussianMCMVariableProjectionSingleValuedCostFunction.cxx  animaGaussianMCMVariableProjectionSingleValuedCostFunction.h  animaIsotropicRestrictedWaterCompartment.cxx  animaIsotropicRestrictedWaterCompartment.h  animaMCMFileReader.cxx  animaMCMFileReader.h  animaMCMFileWriter.hxx  animaMCMImage.hxx  animaMultiCompartmentModel.cxx  animaMultiCompartmentModel.h  animaMultiCompartmentModelCreator.cxx  animaMultiCompartmentModelCreator.h  animaNODDICompartment.cxx  animaNODDICompartment.h  animaNonCentralChiMCMCost.cxx  animaNonCentralChiMCMCost.h  animaStaniszCompartment.cxx  animaStaniszCompartment.h  animaStationaryWaterCompartment.cxx  animaStationaryWaterCompartment.h  (+6 more)
Anima/filtering/: CMakeLists.txt
Anima/math-tools/: CMakeLists.txt
Anima/quantitative-mri/: CMakeLists.txt
Anima/registration/: CMakeLists.txt
Anima/segmentation/: CMakeLists.txt
(+1955 files in other folders)
