## ##############################################################################
## Here go the add_subdirectories, no code should be at the root
## ##############################################################################

add_subdirectory(Diffusion)
add_subdirectory(Registration)
add_subdirectory(Relaxometry)
add_subdirectory(Segmentation)
add_subdirectory(Smoothing)
