project(AnimaMaths)

## ##############################################################################
## Here go the add_subdirectories, no code should be at the root of the project
## ##############################################################################

add_subdirectory(MatrixOperations)
add_subdirectory(NumericalIntegration)
add_subdirectory(Optimizers)
add_subdirectory(SpecialFunctions)
add_subdirectory(SphereOperations)
add_subdirectory(SphericalHarmonics)
add_subdirectory(StatisticalDistributions)
add_subdirectory(Statistics/StatisticalTests)
