################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(AnalyticAssociatedLegendre)
add_subdirectory(Diffusion)
add_subdirectory(Filtering)
add_subdirectory(Image)
add_subdirectory(Registration)
add_subdirectory(Relaxometry)
add_subdirectory(Segmentation)
#add_subdirectory(Statistics)
