################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(Diffusion)
add_subdirectory(Image)
add_subdirectory(Intensity)
add_subdirectory(Noise)
add_subdirectory(Registration)
add_subdirectory(Relaxometry)
add_subdirectory(Segmentation)
add_subdirectory(Statistics)
