project(ANIMA-DIFFUSION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(dti_estimator)
add_subdirectory(dti_tools)
add_subdirectory(tractography)
add_subdirectory(odf)
