project(ANIMA-REGISTRATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(algorithms)
add_subdirectory(anatomical-commands)
add_subdirectory(dti-commands)
add_subdirectory(symmetry)
add_subdirectory(resamplers)
