project(ANIMA-REGISTRATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(anatomical-commands)
add_subdirectory(diffusion-commands)
add_subdirectory(symmetry)
add_subdirectory(resamplers)
add_subdirectory(similarity-measures)
add_subdirectory(tools)
