project(ANIMA-SEGMENTATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(commands)
add_subdirectory(algorithms)
