project(ANIMA-SEGMENTATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(basic_tools)
add_subdirectory(graph_cut)
add_subdirectory(isosurface)
add_subdirectory(validation_tools)
