################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(BiasCorrection)
add_subdirectory(Denoising)
add_subdirectory(DTITools)
add_subdirectory(KMeansStandardization)
add_subdirectory(NoiseGenerator)
add_subdirectory(NyulStandardization)
add_subdirectory(Regularization)
