add_subdirectory(ConcatenateImages)
add_subdirectory(CreateImage)
add_subdirectory(CropImage)
add_subdirectory(EnlargeImage)
add_subdirectory(CollapseImage)
add_subdirectory(ConvertImage)
add_subdirectory(ConvertShape)
add_subdirectory(MergeBlockImages)
add_subdirectory(VectorizeImages)
add_subdirectory(ImageToMask)
add_subdirectory(ImageArithmetic)

